--- a/com.io7m.oxicoco.server.api/pom.xml
+++ b/com.io7m.oxicoco.server.api/pom.xml
@@ -16,7 +16,7 @@
   <packaging>jar</packaging>
   <name>com.io7m.oxicoco.server.api</name>
   <description>Tiny IRC server (Server API)</description>
-  <url>https://www.github.com/io7m/oxicoco</url>
+  <url>https://www.io7m.com/software/oxicoco</url>
 
   <dependencies>
     <dependency>
