--- a/com.io7m.oxicoco.tests/pom.xml
+++ b/com.io7m.oxicoco.tests/pom.xml
@@ -16,7 +16,7 @@
   <packaging>jar</packaging>
   <name>com.io7m.oxicoco.tests</name>
   <description>Tiny IRC server (Test suite)</description>
-  <url>https://www.github.com/io7m/oxicoco</url>
+  <url>https://www.io7m.com/software/oxicoco</url>
 
   <properties>
     <mdep.analyze.skip>true</mdep.analyze.skip>
