--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <packaging>pom</packaging>
   <name>com.io7m.oxicoco</name>
   <description>Tiny IRC server</description>
-  <url>https://www.github.com/io7m/oxicoco</url>
+  <url>https://www.io7m.com/software/oxicoco</url>
 
   <modules>
     <module>com.io7m.oxicoco.messages</module>
