--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
   <properties>
     <com.io7m.xstructural.version>1.2.0</com.io7m.xstructural.version>
     <io7m.api.previousVersion>0.0.1-SNAPSHOT</io7m.api.previousVersion>
+    <io7m.java.targetJavaVersion>21</io7m.java.targetJavaVersion>
     <org.immutables.version>2.10.0</org.immutables.version>
     <junit.version>5.10.1</junit.version>
   </properties>
