--- a/junk/com.io7m.oxicoco.generation/pom.xml
+++ b/junk/com.io7m.oxicoco.generation/pom.xml
@@ -16,7 +16,7 @@
   <packaging>jar</packaging>
   <name>com.io7m.oxicoco.generation</name>
   <description>Tiny IRC server (Code generation)</description>
-  <url>https://www.github.com/io7m/oxicoco</url>
+  <url>https://www.github.com/io7m-com/oxicoco</url>
 
   <dependencies>
     <dependency>
