Update com.io7m.jcip:com.io7m.jcip.annotations 2.0.0 → 2.0.1.

--- a/com.io7m.oxicoco.server.vanilla/pom.xml
+++ b/com.io7m.oxicoco.server.vanilla/pom.xml
@@ -46,7 +46,7 @@
     </dependency>
     <dependency>
       <groupId>com.io7m.jcip</groupId>
-      <artifactId>com.io7m.jcip.annotations</artifactId>
+      <artifactId>com.io7m.jcip</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
